Use table border-collapse to fix row flashing

--- a/011-todo-list/src/App/Components/TodoList/TodoList.css
+++ b/011-todo-list/src/App/Components/TodoList/TodoList.css
@@ -4,14 +4,23 @@
   margin-bottom: 1rem;
 }
 
+.todo-list > .title {
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+}
+
+.todo-list .card {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 .todo-list .is-empty {
   text-align: center;
 }
 
 .todo-list table {
-  padding: 1rem;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
+  border-collapse: collapse;
 }
 
 .todo-list table caption {
@@ -99,7 +108,7 @@
 }
 
 @media (prefers-color-scheme: light) {
-  .todo-list table {
+  .todo-list .card {
     background-color: white;
     box-shadow:
       0 1px 2px rgba(0, 0, 0, 0.1),
